<resources>
    <string name="app_name">NAT-SpeedTest</string>
    <string name="home_title">Neo-AI-Terabyte\nSpeed-Test</string>
    <string name="title_mobile">Mobil-Speed</string>
    <string name="title_home">Home</string>
    <string name="title_location">Heim-Bandbreite</string>
    <string name="subtitle_home">Unsere Speedtest</string>
    <string name="home_description">Diese App wurde von 3 Lernenden erstellt:\nJigme, Lani und Luzi</string>
    <string name="home_mobile_description">Unser schneller Speedtest für unterwegs, schau schnell nach, wie gut dein Internet ist und überzeuge dich selbst!</string>
    <string name="home_location_description">Du willst wissen, wie gut die Leitung in deinem zu Hause, oder in der Wohnung deines Freundes ist?\nDas geht hier ganz einfach!</string>
    <string name="location_whatPlace">Für welche Adresse willst du einen Speedtest durchführen?</string>
    <string name="location_plz">Postleitzahl</string>
    <string name="location_ort">Ort</string>
    <string name="location_adresse">Strasse</string>
    <string name="location_nummer">Hausnummer</string>
    <string name="mbs">MBit/s</string>
    <string name="start_test">Speedtest starten</string>
    <string name="max_download">Max. Download:</string>
    <string name="max_upload">Max. Upload:</string>
    <string name="noResults">...</string>
    <string name="noAdress">Adresse nicht gefunden</string>
    <string name="error">Error</string>
    <string name="error_message">"Keine Internetverbindung: Verbinden Sie sich bitte mit dem Internet."</string>
    <string name="failed">Der Test ist fehlgeschlagen. Bitte versuchen Sie es später nochmal.</string>
    <string name="mobile_test_desc">Mit einem Klick auf den blauen Knopf können Sie ihre aktuelle Internetgeschwindigkeit messen.</string>
    <string name="bandWith_test_desc">Mit einem Klick auf den blauen Knopf können Sie die Bandbreite ihres Hauses oder dessen ihres Freundes herausfinden.\nGeben Sie dazu die gewünschte Adresse ein und starten Sie den Test.</string>
    <string name="error_message_noAdress">Die angegebene Adresse konnte nicht gefunden werden. Bitte versuchen Sie es nochmal.</string>
    <string name="error_message_emptyInput">Sie haben nicht alle Felder ausgefüllt. Bitte füllen Sie alle Felder aus.</string>
    <string name="imageDesc">Das ist ein Bild von einem Tachometer</string>
    <string name="ping">Ping:</string>
    <string name="imageDesc">Das ist ein Bild von einem Tachometer</string>

</resources>
