<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ch.jll.nat_speedtest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_mobile"
        android:name="ch.jll.nat_speedtest.ui.mobile_test.MobileTestFragment"
        android:label="@string/title_mobile"
        tools:layout="@layout/fragment_mobiletest" />

    <fragment
        android:id="@+id/navigation_bandwith"
        android:name="ch.jll.nat_speedtest.ui.bandwith_test.BandwithTestFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_bandwithtest" />
</navigation>